; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/mm/extr_io-unit.c_iounit_get_scsi_sgl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/mm/extr_io-unit.c_iounit_get_scsi_sgl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.iounit_struct* }
%struct.iounit_struct = type { i32 }
%struct.scatterlist = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.device*, %struct.scatterlist*, i32)* @iounit_get_scsi_sgl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @iounit_get_scsi_sgl(%struct.device* %0, %struct.scatterlist* %1, i32 %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.scatterlist*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.iounit_struct*, align 8
  %8 = alloca i64, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.scatterlist* %1, %struct.scatterlist** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %struct.device*, %struct.device** %4, align 8
  %10 = getelementptr inbounds %struct.device, %struct.device* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load %struct.iounit_struct*, %struct.iounit_struct** %11, align 8
  store %struct.iounit_struct* %12, %struct.iounit_struct** %7, align 8
  %13 = load %struct.iounit_struct*, %struct.iounit_struct** %7, align 8
  %14 = getelementptr inbounds %struct.iounit_struct, %struct.iounit_struct* %13, i32 0, i32 0
  %15 = load i64, i64* %8, align 8
  %16 = call i32 @spin_lock_irqsave(i32* %14, i64 %15)
  br label %17

17:                                               ; preds = %20, %3
  %18 = load i32, i32* %6, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %39

20:                                               ; preds = %17
  %21 = load i32, i32* %6, align 4
  %22 = add nsw i32 %21, -1
  store i32 %22, i32* %6, align 4
  %23 = load %struct.iounit_struct*, %struct.iounit_struct** %7, align 8
  %24 = load %struct.scatterlist*, %struct.scatterlist** %5, align 8
  %25 = call i64 @sg_virt(%struct.scatterlist* %24)
  %26 = load %struct.scatterlist*, %struct.scatterlist** %5, align 8
  %27 = getelementptr inbounds %struct.scatterlist, %struct.scatterlist* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @iounit_get_area(%struct.iounit_struct* %23, i64 %25, i32 %28)
  %30 = load %struct.scatterlist*, %struct.scatterlist** %5, align 8
  %31 = getelementptr inbounds %struct.scatterlist, %struct.scatterlist* %30, i32 0, i32 2
  store i32 %29, i32* %31, align 4
  %32 = load %struct.scatterlist*, %struct.scatterlist** %5, align 8
  %33 = getelementptr inbounds %struct.scatterlist, %struct.scatterlist* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = load %struct.scatterlist*, %struct.scatterlist** %5, align 8
  %36 = getelementptr inbounds %struct.scatterlist, %struct.scatterlist* %35, i32 0, i32 1
  store i32 %34, i32* %36, align 4
  %37 = load %struct.scatterlist*, %struct.scatterlist** %5, align 8
  %38 = call %struct.scatterlist* @sg_next(%struct.scatterlist* %37)
  store %struct.scatterlist* %38, %struct.scatterlist** %5, align 8
  br label %17

39:                                               ; preds = %17
  %40 = load %struct.iounit_struct*, %struct.iounit_struct** %7, align 8
  %41 = getelementptr inbounds %struct.iounit_struct, %struct.iounit_struct* %40, i32 0, i32 0
  %42 = load i64, i64* %8, align 8
  %43 = call i32 @spin_unlock_irqrestore(i32* %41, i64 %42)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @iounit_get_area(%struct.iounit_struct*, i64, i32) #1

declare dso_local i64 @sg_virt(%struct.scatterlist*) #1

declare dso_local %struct.scatterlist* @sg_next(%struct.scatterlist*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
